# promptweaver

./: HYPEROBJECT_SPEC.md  RENDER_PERF_AUDIT_OUTLINE.md  pyproject.toml
apeiron/: __init__.py  __main__.py  app.py  models.py  palettes.py  store.py  widgets.py
apeiron/data/: curated_components.yaml  curated_v2.yaml  generated_candidates_20260325_193614.yaml  selected_gated_openclip_t5xxl.yaml  template_profiles.yaml
apeiron/hyperobject/: __init__.py  dynamics.py  embedding_cache.py  geometry.py  interpreter.py  lut.py  particles.py  postfx.py  primitives.py  rasterizer.py  scene.py  shaders.py  state.py  transform.py  viewport.py
apeiron/tools/: __init__.py  analyze.py  cross_model_analysis.py  curate.py  embeddings.py  generate.py  multi_embed.py  pool_analysis.py  probe.py  profile_templates.py  select.py  visualize.py
promptweaver/: __init__.py  __main__.py  app.py  engine.py  models.py  palettes.py  store.py  widgets.py
promptweaver/data/: components.yaml  curated_gated.yaml  pool_analysis_report.yaml  probe_clip_analysis.yaml  probe_results.yaml  reallocated_gated.yaml  selected_gated_openclip_t5xxl_analysis.yaml  template_profiles.yaml  templates.yaml
promptweaver/hyperobject/: geometry.py  interpreter.py  postfx.py  rasterizer.py  scene.py  transform.py  viewport.py
promptweaver/tools/: analyze.py  cross_model_analysis.py  curate.py  embeddings.py  generate.py  multi_embed.py  pool_analysis.py  probe.py  profile_templates.py  select.py  visualize.py
