[project]
name = "promptweaver"
version = "0.1.0"
description = "Combinatorial prompt generator with TUI — never repeats"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
promptweaver = "promptweaver.__main__:main"
pw = "promptweaver.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
