[project]
name = "apeiron"
version = "0.1.0"
description = "Combinatorial prompt generator with TUI — never repeats"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pyfiglet>=1.0.2",
    "pillow>=12.1.1",
]

[project.optional-dependencies]
tools = [
    "torch>=2.0",
    "transformers>=4.40",
    "numpy>=1.24",
    "aiohttp>=3.9",
]

[project.scripts]
apeiron = "apeiron.__main__:main"
ap = "apeiron.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
